Fix red for a11y contrast

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -1,6 +1,6 @@
 $blue: #0F3AE6;
 
-$red: #DF1656;
+$red: #DE1656;
 
 $light: #79F7EA;
 
